[package]
name = "puny-tls"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.8"
hex = "0.4.3"
rand_core = { version = "0.5", default-features = false, features = [ "getrandom" ] } # 0.5.0 because of x25519-dalek

[dependencies]
embedded-io = { version = "0.3.0", default-features = false }
log = "0.4.17"
rand_core = { version = "0.5", default-features = false } # 0.5.0 because of x25519-dalek
curve25519-dalek = { version = "3.2.1", default-features = false }
x25519-dalek = { version = "1.2.0", default-features = false, features = [ "u64_backend" ] }
hkdf = { version = "0.12.3", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
aes-gcm = { version = "0.9.4", default-features = false, features = [ "aes" ] }
